Vert.x-based generated REST Service
